# signal-bot-v2

./: .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  QO'LLAMA.md  README.md  SETUP_GUIDE.md  alembic.ini  deploy_pa.py  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  railway.toml  seed.py  seed_subs.py
bot/: config.py  main.py
bot/alembic/: env.py
bot/database/: engine.py  session.py
bot/handlers/: account.py  announcement.py  course.py  help.py  referral.py  setup.py  signals.py  social.py  start.py
bot/handlers/admin/: __init__.py  dashboard.py  help.py  payment_methods.py  payments.py  settings.py  social.py  stats.py  subscriptions.py  tariffs.py  users.py
bot/middlewares/: auth.py  throttling.py
bot/models/: __init__.py  base.py  payment.py  project_settings.py  promo_code.py  referral_stat.py  subscription.py  tariff.py  user.py
bot/scheduler/: jobs.py  setup.py
bot/services/: channel_service.py  payment_service.py  promo_service.py  referral_service.py  settings_service.py  subscription_service.py  user_service.py
bot/utils/: helpers.py  keyboards.py  states.py  texts.py
tests/: conftest.py  test_models.py  test_payment_flow.py  test_promo.py  test_referral.py  test_subscription.py
website/: .railwayignore  Dockerfile  custom.db  package-lock.json  worklog.md
website/app/: layout.tsx  page.tsx
website/components/pages/: admin.tsx  course.tsx  market.tsx  signals.tsx
website/components/shared/: glass-card.tsx
website/prisma/: schema.prisma  seed.ts
website/src/app/: globals.css
website/src/lib/: constants.ts  (+1 more)
(+32 files in other folders)
