[project]
name = "signal-bot-v2"
version = "2.0.0"
description = "Telegram Premium Signal Bot — Stars + Card/Check + Admin Approval"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pillow>=10",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "aiosqlite>=0.20",
]

production = [
    "asyncpg>=0.30",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]